crates/syntax/tests/snapshots/parser__parser_call positional args.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..38,
        statements: StatementList {
            span: 0..38,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..38,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: Call(
                            Call {
                                span: 0..38,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                name: QualifiedName {
                                    span: 0..3,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    parts: [
                                        Identifier {
                                            span: 0..3,
                                            name: "foo",
                                        },
                                    ],
                                },
                                arguments: ArgumentList {
                                    span: 4..37,
                                    extras: ItemExtras {
                                        leading: [
                                            Whitespace(
                                                "\n        ",
                                            ),
                                        ],
                                        trailing: [],
                                    },
                                    arguments: [
                                        Unnamed(
                                            UnnamedArgument {
                                                span: 13..14,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                value: Literal(
                                                    Literal {
                                                        span: 13..14,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 13..14,
                                                                value: 1,
                                                                raw: "1",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        Unnamed(
                                            UnnamedArgument {
                                                span: 16..37,
                                                extras: ItemExtras {
                                                    leading: [
                                                        Comment(
                                                            Comment {
                                                                span: 16..22,
                                                                inner: SingleLine(
                                                                    [
                                                                        "// foo",
                                                                    ],
                                                                ),
                                                            },
                                                        ),
                                                        Whitespace(
                                                            "\n        ",
                                                        ),
                                                    ],
                                                    trailing: [],
                                                },
                                                value: Literal(
                                                    Literal {
                                                        span: 31..37,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [
                                                                Whitespace(
                                                                    "\n    ",
                                                                ),
                                                            ],
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 31..32,
                                                                value: 2,
                                                                raw: "2",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
