crates/syntax/tests/snapshots/parser__parser_comment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..17,
        statements: StatementList {
            span: 0..17,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                LocalAssignment(
                    LocalAssignment {
                        span: 0..5,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        name: Identifier {
                            span: 0..1,
                            name: "a",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                span: 4..5,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 4..5,
                                        value: 1,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Comment(
                    Comment {
                        span: 7..17,
                        lines: [
                            "comment",
                        ],
                    },
                ),
            ],
            tail: None,
        },
    },
)
