crates/syntax/tests/snapshots/parser__parser_doc comment assigment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..26,
        statements: StatementList {
            span: 0..26,
            statements: [
                Assignment(
                    Assignment {
                        span: 0..25,
                        doc: Some(
                            Comment {
                                span: 0..15,
                                comment: "/// Doc comment",
                            },
                        ),
                        attributes: [],
                        visibility: None,
                        qualifier: None,
                        name: Identifier {
                            span: 20..21,
                            name: "a",
                        },
                        ty: None,
                        value: Literal(
                            Integer(
                                IntegerLiteral {
                                    span: 24..25,
                                    value: 1,
                                },
                            ),
                        ),
                    },
                ),
            ],
            tail: None,
            tail_comment: None,
        },
    },
)
