crates/syntax/tests/snapshots/parser__parser_doc comment assignment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..26,
        statements: StatementList {
            span: 0..26,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Assignment(
                    Assignment {
                        span: 0..25,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: Some(
                            Comment {
                                span: 0..20,
                                lines: [
                                    "/// Doc comment",
                                ],
                            },
                        ),
                        attributes: [],
                        visibility: None,
                        qualifier: None,
                        name: Identifier {
                            span: 20..21,
                            name: "a",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                span: 24..25,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 24..25,
                                        value: 1,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
