crates/syntax/tests/snapshots/parser__parser_doc comment const.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..32,
        statements: StatementList {
            span: 0..32,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Const(
                    ConstAssignment {
                        span: 0..31,
                        keyword_span: 20..25,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: Some(
                            Comment {
                                span: 0..20,
                                lines: [
                                    "/// Doc comment",
                                ],
                            },
                        ),
                        attributes: [],
                        visibility: None,
                        name: Identifier {
                            span: 26..27,
                            name: "A",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                span: 30..31,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 30..31,
                                        value: 1,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
