crates/syntax/tests/snapshots/parser__parser_doc comment fn.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..46,
        statements: StatementList {
            span: 0..46,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Function(
                    FunctionDefinition {
                        span: 0..46,
                        keyword_span: 20..22,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: Some(
                            Comment {
                                span: 0..20,
                                lines: [
                                    "/// Doc comment",
                                ],
                            },
                        ),
                        attributes: [],
                        visibility: None,
                        name: Identifier {
                            span: 23..26,
                            name: "Foo",
                        },
                        parameters: ParameterList {
                            span: 27..27,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            parameters: [],
                        },
                        return_type: None,
                        body: StatementList {
                            span: 39..45,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            statements: [],
                            tail: Some(
                                Expression(
                                    ExpressionStatement {
                                        span: 39..40,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        attributes: [],
                                        expression: Literal(
                                            Literal {
                                                span: 39..40,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 39..40,
                                                        value: 1,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    },
                ),
            ],
            tail: None,
        },
    },
)
