crates/syntax/tests/snapshots/parser__parser_doc comment init.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..28,
        statements: StatementList {
            span: 0..28,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    Init(
                        InitDefinition {
                            span: 0..28,
                            keyword_span: 20..24,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            doc: DocBlock {
                                span: 0..20,
                                lines: [
                                    "/// Doc comment",
                                ],
                            },
                            attributes: [],
                            parameters: ParameterList {
                                span: 25..25,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parameters: [],
                            },
                            body: Body {
                                span: 26..28,
                                statements: StatementList {
                                    span: 27..27,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    statements: [],
                                    tail: None,
                                },
                            },
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
