crates/syntax/tests/snapshots/parser__parser_doc comment property.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..31,
        statements: StatementList {
            span: 0..31,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Property(
                        PropertyAssignment {
                            span: 0..30,
                            keyword_span: 20..24,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            doc: Some(
                                Comment {
                                    span: 0..20,
                                    inner: SingleLine(
                                        [
                                            "/// Doc comment",
                                        ],
                                    ),
                                },
                            ),
                            attributes: [],
                            name: Identifier {
                                span: 25..26,
                                name: "a",
                            },
                            ty: None,
                            value: Literal(
                                Literal {
                                    span: 29..30,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 29..30,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
